# arcdps-uploader

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  appveyor.yml  arcdps_uploader.sln  vcpkg.json
.github/workflows/: build.yaml  cmake.yml
arcdps_uploader/: Aleeva.cpp  Aleeva.h  Log.cpp  Log.h  Registry.hpp  Settings.cpp  Settings.h  Uploader.cpp  Uploader.h  arc_logging.cpp  arc_logging.h  arcdps_defs.h  arcdps_uploader.cpp  arcdps_uploader.h  arcdps_uploader.vcxproj  arcdps_uploader.vcxproj.filters  main.cpp  packages.config  randombytes.c
arcdps_uploader/cpr/: error.cpp  session.cpp
lib/: libcurl.lib
